--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <p></p>
             <p></p>
             <p></p>
-            <h2 class="mb-4">Consultants</h2>
+            <h2 class="mb-4">Consultants and Advisors</h2>
             <p>Throughout development, SuiSense has consulted with psychologists to understand the issues facing depressed and suicidal teens.
               These consultants and their professional experience has been instrumental in helping our team understand the foundational problems and the most effective ways
               to approach them.
@@ -285,15 +285,17 @@
 
               <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
                 <div class="ftco-staff">
-                  <img src="images/team/genericAvatar.png" alt="Template">
+                  <img src="images/drruebsamen.png" alt="Template">
                   <br>
                   <br>
-                  <h3>Paul Marcille</h3>
+                  <h3>Marilee Ruebsamen</h3>
                   <strong class="role">Psychologist, PhD</strong>
 
               <div class="col-md-12">
-              <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-                Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
+              <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
+                Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
+                Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
+                She has connected us with potential users and is currently working with us to implement our algorithm. 
               </p>
             </div>
 
