--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
               <img src="images/drmarcille.png" alt="Template">
               <br>
               <br>
-              <h3>Paul Marcille</h3>
-              <strong class="role">Psychologist, PhD, Santa Clara County</strong>
+              <h3><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
+              <strong class="role" >Psychologist, PhD, Santa Clara County</strong>
               <div class="col-md-12">
                 <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
                   He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
@@ -288,14 +288,14 @@
                   <img src="images/drruebsamen.png" alt="Template">
                   <br>
                   <br>
-                  <h3>Marilee Ruebsamen</h3>
+                  <h3><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
                   <strong class="role">Psychologist, PhD</strong>
 
               <div class="col-md-12">
               <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
                 Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
                 Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
-                She has connected us with potential users and is currently working with us to implement our algorithm. 
+                She has connected us with potential users and is currently working with us to implement our algorithm.
               </p>
             </div>
 
@@ -378,7 +378,7 @@
             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services d-flex align-items-center">
                 <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
-                  <h3 class="heading"><center>Children's Addiction Prevention Association</center></h3>
+                  <h3 class="heading"><center><a href="https://capmovement.org/">Children's Addiction Prevention Association</a></center></h3>
                   <p class="mb-0"><center>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</center>
 
                 </div>
@@ -387,7 +387,7 @@
             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services d-flex align-items-center">
                 <div class="media-body pl-4">
-                  <h3 class="heading"><center>Mental Health Initiative</center></h3>
+                  <h3 class="heading"><center><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
                   <p class="mb-0"><center>Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</center></p>
                 </div>
               </div>
