Fixed Index Pictures

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
-              <img src="images/drmarcille.png" alt="Template">
+              <img src="images/drmarcille.png" width ="30%"alt="Template">
               <br>
               <br>
               <h3><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
@@ -285,7 +285,7 @@
 
               <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
                 <div class="ftco-staff">
-                  <img src="images/drruebsamen.png" alt="Template">
+                  <img src="images/drruebsamen.png" width="30%"alt="Template">
                   <br>
                   <br>
                   <h3><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
@@ -302,39 +302,7 @@
             </div>
           </div>
 
-          <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/genericAvatar.png" alt="Template">
-              <br>
-              <br>
-              <h3>Paul Marcille</h3>
-              <strong class="role">Psychologist, PhD</strong>
 
-          <div class="col-md-12">
-          <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-            Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
-          </p>
-        </div>
-
-        </div>
-      </div>
-
-      <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
-        <div class="ftco-staff">
-          <img src="images/team/genericAvatar.png" alt="Template">
-          <br>
-          <br>
-          <h3>Paul Marcille</h3>
-          <strong class="role">Psychologist, PhD</strong>
-
-      <div class="col-md-12">
-      <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-        Past president of the California and Santa Clara Psychological Associations and former Professor & Program Director at Palo Alto University,
-      </p>
-    </div>
-
-    </div>
-  </div>
           <!--
           <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
