Fixed Questionaire colors

--- a/analysis2.html
+++ b/analysis2.html
@@ -241,8 +241,8 @@
 
                 function select(e) {
                   var t = document.getElementById(e)
-                  if (t.style.background != "#6e4af8") {
-                    t.style.background = "#6e4af8"
+                  if (t.style.background != "#73eb39") {
+                    t.style.background = "#73eb39"
                   }
                 }
 
