--- a/analysis2.html
+++ b/analysis2.html
@@ -108,10 +108,11 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
             <center>
-              <h2>Burns Depression Checklist</h2>
+              <h2>Questionaire Based Analysis</h2>
+              <h3>Based On Burns Depression Checklist</h3>
 
               <div id="page">
-                <h4 id="category">Thoughts and Feelings</h4>
+                <h5 id="category">Thoughts and Feelings</h5>
 
                 <div id="question">Feeling sad or down in the dumps</div>
                 <br>
