--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
+            <div clvass="ftco-staff">
               <img src="images/drmarcille.png" width ="30%"alt="Template">
               <br>
               <br>
@@ -300,66 +300,56 @@
             </div>
 
             </div>
-          </div>
 
-
-          <!--
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/vijarjpic.png" alt="Template">
-              <h3>Viraaj<br>Reddi</h3>
-              <strong class="role">Fullstack, Backend</strong>
-
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/adithyapic.png" alt="Template">
-              <br>
-              <h3>Adithya<br>Peruvemba</h3>
-              <strong class="role">Frontend, UI Developer</strong>
-
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/ishaanpic.png" alt="Template">
-              <h3>Ishaan<br>Bhandari</h3>
-              <strong class="role">Frontend, UI Developer</strong>
-              <!--
-              <div class='testingDiv'>
-              <a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a>
-              <a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a>
-              <a href="mailto: ishaanbhandari0@gmail.com"><i class="icon-inbox"></i></a>
-              <a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a>
-            </div>
-          -->
-              </div>
-            </div>
           </section>
-
-
-
-          <center><h1>Partnerships</h1></center>
-          <br>
-          <div class="row">
-            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services d-flex align-items-center">
-                <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
-                  <h3 class="heading"><center><a href="https://capmovement.org/">Children's Addiction Prevention Association</a></center></h3>
-                  <p class="mb-0"><center>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</center>
-
+          <section class="ftco-section">
+            <div class="container">
+              <div class="row justify-content-center mb-5 pb-3">
+                <div class="col-md-7 text-center heading-section ftco-animate">
+                  <p></p>
+                  <p></p>
+                  <p></p>
+                  <h2 class="mb-4">Partnerships</h2>
+                  <p>SuiSense proudly has built partnerships with local student-led organizations in order to maximize our impact. Currently, we are working with our high school and have established partnerships with two
+                    local organizations. These partnerships are key in order to implement our solution, and we have made successful progress.
+                  </p>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services d-flex align-items-center">
-                <div class="media-body pl-4">
-                  <h3 class="heading"><center><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
-                  <p class="mb-0"><center>Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</center></p>
-                </div>
-              </div>
-            </div>
+              <div class="row">
+                <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+                  <div clvass="ftco-staff">
+                    <img src="images/capalogo.png" width ="30%"alt="Template">
+                    <br>
+                    <br>
+                    <h3><a href="https://capmovement.org/">Children's Addiction Prevention Association</a></h3>
+                    <div class="col-md-12">
+                      <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
+                        He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
+                        Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution.
+                        Dr. Marcille has supported our concept and we are currently working towards validating and implementing our solution.
+                      </p>
+
+                    <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+                      <div class="ftco-staff">
+                        <img src="images/mhilogo.png" width="30%"alt="Template">
+                        <br>
+                        <br>
+                        <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
+
+                    <div class="col-md-12">
+                    <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
+                      Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
+                      Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
+                      She has connected us with potential users and is currently working with us to implement our algorithm.
+                    </p>
+                  </div>
+
+                  </div>
+
+                </section>
+
+
+
 
 -->
       <section class="ftco-section bg-light">
