--- a/analysis2.html
+++ b/analysis2.html
@@ -89,7 +89,7 @@
     </div>
 <center>
 
-  <iframe src="https://suisense.pythonanywhere.com/" width="100%" height="600" frameBorder="0"></iframe>
+  <iframe src="https://suisense.pythonanywhere.com/advancedprogression" width="100%" height="600" frameBorder="0"></iframe>
 
     </center>
   </section>
