rough draft of home page good

--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
                     <br>
                     <h3><a href="https://capmovement.org/">Children's Addiction Prevention Association</a></h3>
                     <div class="col-md-12">
-                      <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-                        He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
-                        Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution.
-                        Dr. Marcille has supported our concept and we are currently working towards validating and implementing our solution.
+                      <p>Founded in April 2020 by passionate high schoolers, the Children's Addiction Prevention Association (CAPA) hopes to prevent drug abuse among teenagers.
+                        By focusing on elementary school students, we aim to provide the future generation with the tools for careful decision-making.
+                        SuiSense has been promoted and supported by the chapters of CAPA, and the userbase of SuiSense has grown as a result. SuiSense has been presented
+                        at CAPA events, and many neighbooring schools have begun to show their support.
                       </p>
 
                     <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
@@ -337,10 +337,9 @@
                         <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
 
                     <div class="col-md-12">
-                    <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
-                      Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
-                      Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
-                      She has connected us with potential users and is currently working with us to implement our algorithm.
+                    <p>A youth based organization founded in June of 2020, Mental Health Initiative (MHI) is a nonprofit dedicated to eliminating the single story surrounding a typical bay area student stereotype.
+                      The team is highly motivated to expunging the common stigma around mental health issues in the Bay Area and bridging the wide
+                      gap between parents and students regarding mental health problems. Our partnership has helped promote both our services, and we have grown both of our followings. SuiSense has been supported through events, such as ones held by TAB at the Saratoga Library.
                     </p>
                   </div>
 
