fixed index partner formatting

--- a/index.html
+++ b/index.html
@@ -269,83 +269,79 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+          <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
             <div clvass="ftco-staff">
-              <img src="images/drmarcille.png" width ="30%"alt="Template">
+              <img src="images/drmarcille.png" width ="50%"alt="Template">
               <br>
               <br>
               <h3><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
               <strong class="role" >Psychologist, PhD, Santa Clara County</strong>
-              <div class="col-md-12">
                 <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
                   He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
                   Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution.
                   Dr. Marcille has supported our concept and we are currently working towards validating and implementing our solution.
                 </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="ftco-staff">
+                <img src="images/drruebsamen.png" width="50%"alt="Template">
+                <br>
+                <br>
+                <h3><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
+                <strong class="role">Psychologist, PhD</strong>
+                <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
+                  Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
+                  Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
+                  She has connected us with potential users and is currently working with us to implement our algorithm.
+                </p>
 
-              <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
-                <div class="ftco-staff">
-                  <img src="images/drruebsamen.png" width="30%"alt="Template">
-                  <br>
-                  <br>
-                  <h3><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
-                  <strong class="role">Psychologist, PhD</strong>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-              <div class="col-md-12">
-              <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
-                Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
-                Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
-                She has connected us with potential users and is currently working with us to implement our algorithm.
+      <section class="ftco-section">
+        <div class="container">
+          <div class="row justify-content-center mb-5 pb-3">
+            <div class="col-md-7 text-center heading-section ftco-animate">
+              <h2 class="mb-4">Partnerships</h2>
+              <p>SuiSense proudly has built partnerships with local student-led organizations in order to maximize our impact. Currently, we are working with our high school and have established partnerships with two
+                local organizations. These partnerships are key in order to implement our solution, and we have made successful progress.
               </p>
             </div>
-
-            </div>
-
-          </section>
-          <section class="ftco-section">
-            <div class="container">
-              <div class="row justify-content-center mb-5 pb-3">
-                <div class="col-md-7 text-center heading-section ftco-animate">
-                  <p></p>
-                  <p></p>
-                  <p></p>
-                  <h2 class="mb-4">Partnerships</h2>
-                  <p>SuiSense proudly has built partnerships with local student-led organizations in order to maximize our impact. Currently, we are working with our high school and have established partnerships with two
-                    local organizations. These partnerships are key in order to implement our solution, and we have made successful progress.
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+              <div clvass="ftco-staff">
+                <img src="images/capalogo.png" width ="73%"alt="Template">
+                <br>
+                <br>
+                <h3><a href="https://capmovement.org/" style="font-size: 25px;">Children's Addiction Prevention Association</a></h3>
+                  <p>Founded in April 2020 by passionate high schoolers, the Children's Addiction Prevention Association (CAPA) hopes to prevent drug abuse among teenagers.
+                    By focusing on elementary school students, we aim to provide the future generation with the tools for careful decision-making.
+                    SuiSense has been promoted and supported by the chapters of CAPA, and the userbase of SuiSense has grown as a result. SuiSense has been presented
+                    at CAPA events, and many neighbooring schools have begun to show their support.
                   </p>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
-                  <div clvass="ftco-staff">
-                    <img src="images/capalogo.png" width ="30%"alt="Template">
-                    <br>
-                    <br>
-                    <h3><a href="https://capmovement.org/">Children's Addiction Prevention Association</a></h3>
-                    <div class="col-md-12">
-                      <p>Founded in April 2020 by passionate high schoolers, the Children's Addiction Prevention Association (CAPA) hopes to prevent drug abuse among teenagers.
-                        By focusing on elementary school students, we aim to provide the future generation with the tools for careful decision-making.
-                        SuiSense has been promoted and supported by the chapters of CAPA, and the userbase of SuiSense has grown as a result. SuiSense has been presented
-                        at CAPA events, and many neighbooring schools have begun to show their support.
-                      </p>
+              <div class="col-md-6 col-sm-6 text-center animate-box" data-animate-effect="fadeIn">
+                <div class="ftco-staff">
+                  <img src="images/mhilogo.png" width="30%"alt="Template">
+                  <br>
+                  <br>
+                  <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
+              <p>A youth based organization founded in June of 2020, Mental Health Initiative (MHI) is a nonprofit dedicated to eliminating the single story surrounding a typical bay area student stereotype.
+                The team is highly motivated to expunging the common stigma around mental health issues in the Bay Area and bridging the wide
+                gap between parents and students regarding mental health problems. Our partnership has helped promote both our services, and we have grown both of our followings. SuiSense has been supported through events, such as ones held by TAB at the Saratoga Library.
+              </p>
 
-                    <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
-                      <div class="ftco-staff">
-                        <img src="images/mhilogo.png" width="30%"alt="Template">
-                        <br>
-                        <br>
-                        <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
-
-                    <div class="col-md-12">
-                    <p>A youth based organization founded in June of 2020, Mental Health Initiative (MHI) is a nonprofit dedicated to eliminating the single story surrounding a typical bay area student stereotype.
-                      The team is highly motivated to expunging the common stigma around mental health issues in the Bay Area and bridging the wide
-                      gap between parents and students regarding mental health problems. Our partnership has helped promote both our services, and we have grown both of our followings. SuiSense has been supported through events, such as ones held by TAB at the Saratoga Library.
-                    </p>
-                  </div>
-
-                  </div>
-
-                </section>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
 
 
