--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <img src="images/drmarcille.png" width ="50%"alt="Template">
               <br>
               <br>
-              <h3><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
+              <h3><a>Consultant: </a><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
               <strong class="role" >Psychologist, PhD, Santa Clara County</strong>
                 <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
                   He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
@@ -288,7 +288,7 @@
                 <img src="images/drruebsamen.png" width="50%"alt="Template">
                 <br>
                 <br>
-                <h3><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
+                <h3><a>Advisor: </a><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
                 <strong class="role">Psychologist, PhD</strong>
                 <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
                   Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
