changed button size

--- a/analysis2.html
+++ b/analysis2.html
@@ -134,7 +134,7 @@
                 <br>
               </div>
               <div id="navigation">
-                  <input type="button" class="btn btn-primary px-4 py-3" id="back" onclick="back_handler()" value="Back"> </input> <input type="button" class="btn btn-primary px-4 py-3" id="next" onclick="next_handler()" value="Next"></input>
+                  <input type="button" class="btn btn-secondary px-4 py-3" style="width: 25% !important;" id="back" onclick="back_handler()" value="Back"> </input> <input type="button" class="btn btn-primary px-4 py-3"  style="width: 25% !important;" id="next" onclick="next_handler()" value="Next"></input>
               </div>
 
               <div id="results" style="display: none">
