--- a/index.html
+++ b/index.html
@@ -51,50 +51,54 @@
 	  </nav>
     <!-- END nav -->
 
+<style>
+.bgimage {
+  width:100%;
+  height:500px;
+  background: url('https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
+}
+.bgimage h5 {
+  color:white;
+  text-shadow:2px 2px #333;
+}
+</style>
 
-        <style>
-        body, html {
-          height: 100%;
-          margin: 0;
-        }
 
-        .hero-image {
-          background-image:url("images/altHomeImage.png");
-          height: 100%;
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: cover;
-          position: relative;
-        }
+<section class="bgimage">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h5>Hello, world! Full width Hero-unit header</h5>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
+      </div>
+    </div>
+  </div>
+</section>
 
-        .hero-text {
-          text-align: center;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
 
-        </style>
+    <div class="hero-wrap js-fullheight">
+      <div class="overlay"></div>
+      <div class="container-fluid px-0">
+        <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
+          <img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/altDiagnosis.png" alt="">
 
-        <div class="hero-wrap js-fullheight">
-          <div class="overlay"></div>
-          <div class="container-fluid px-0">
-          	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-    	      	<img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/altDiagnosis.png" alt="">
+          <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
-              <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
+            <div class="text mt-4">
+              <h1 class="mb-3"><span> <!--<img src="images/hand-logo.png" height="45px">-->SuiSense</span></h1>
+              <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+              <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
 
-    	        	<div class="text mt-4">
-    	            <h1 class="mb-3"><span> <!--<img src="images/hand-logo.png" height="45px">-->SuiSense</span></h1>
-                  <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-                  <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
-
-    	          </div>
-    	        </div>
-    	    	</div>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
 
 
 
