--- a/analysis.html
+++ b/analysis.html
@@ -54,6 +54,30 @@
 	  </nav>
     <!-- END nav -->
 
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <center>
+        <div class="text mt-4">
+          <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='font-size: 100px !important; '><b>SuiSense</b></span></h1>
+          <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+          <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
+        </center>
+        </div>
+      </div>
+    </div>
+
+  <style>
+  .jumbotron {
+  color: white;
+  background-image: url("images/diagnosispic.png");/*url("https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c");*/
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  }
+  </style>
+
+  <!--
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
@@ -70,7 +94,7 @@
 	    	</div>
       </div>
     </div>
-
+-->
 <!--
 
   <section class="ftco-section">
