replaced therapist pic

--- a/pairings.html
+++ b/pairings.html
@@ -561,7 +561,7 @@ display: center;
             <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
               <div class="card">
                 <div class="card-img">
-                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/william.jpeg" alt="...">
+                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/the6.png" alt="...">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title"><a href="">Your Match:</a></h3>
