fixed image text stuff

--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
       <div class="container">
         <center>
         <div class="text mt-4">
-          <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='font-size: 100px !important; '><b>SuiSense</b></span></h1>
-          <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+          <div class='testingthis'>
+            <div class='col-sm-8'>
+          <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="50px" style='vertical-align: 0%;'> <b style='font-size: 65px !important;'>SuiSense</b></span></h1>
+          <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
           <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
-        </center>
         </div>
+        </div>
+      </div>
+        </center>
       </div>
     </div>
 
@@ -71,6 +75,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+
+.testingthis {
+  text-align: center;
+position: absolute;
+top: 30%;
+left: 33%;
 }
 </style>
 
@@ -427,7 +438,7 @@
 
 						      <div class="card">
 						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo">Don't people know if someone is suicidal? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo">Don't people know if someone is suicidal? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menutwo" class="collapse">
 						          <div class="card-body">
@@ -438,7 +449,7 @@
 
 						      <div class="card">
 						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu3" aria-expanded="false" aria-controls="menu3">Who is this site specifically meant for? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu3" aria-expanded="false" aria-controls="menu3">Who is this site specifically meant for? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu3" class="collapse">
 						          <div class="card-body">
@@ -451,7 +462,7 @@
     						<div class="col-md-6">
     							<div class="card">
 						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I navigate through the site? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I navigate through the site? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
@@ -463,7 +474,7 @@
 
 						      <div class="card">
 						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu5" aria-expanded="false" aria-controls="menu5">Why is our site better than existing models? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu5" aria-expanded="false" aria-controls="menu5">Why is our site better than existing models? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu5" class="collapse">
 						          <div class="card-body">
