--- a/analysis2.html
+++ b/analysis2.html
@@ -58,11 +58,15 @@
       <div class="container">
         <center>
         <div class="text mt-4">
-          <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='font-size: 100px !important; '><b>SuiSense</b></span></h1>
-          <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+          <div class='testingthis'>
+            <div class='col-sm-8'>
+          <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Advanced Analysis</b></span></h1>
+          <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
           <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
-        </center>
         </div>
+        </div>
+      </div>
+        </center>
       </div>
     </div>
 
@@ -74,6 +78,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+
+.testingthis {
+  text-align: center;
+position: absolute;
+top: 30%;
+left: 33%;
 }
 </style>
 
