--- a/pairings.html
+++ b/pairings.html
@@ -51,11 +51,15 @@
       <div class="container">
         <center>
         <div class="text mt-4">
-          <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='font-size: 100px !important; '><b>SuiSense</b></span></h1>
-          <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+          <div class='testingthis'>
+            <div class='col-sm-8'>
+          <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Support</b></span></h1>
+          <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
           <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
-        </center>
         </div>
+        </div>
+      </div>
+        </center>
       </div>
     </div>
 
@@ -67,6 +71,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+}
+
+.testingthis {
+  text-align: center;
+position: absolute;
+top: 30%;
+left: 33%;
 }
 </style>
 
@@ -585,7 +596,7 @@ display: center;
             <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
               <div class="card">
                 <div class="card-img">
-                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/the6.png" alt="...">
+                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/william.jpeg" alt="...">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title"><a href="">Your Match:</a></h3>
