--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <style>
 .jumbotron {
   color: white;
-  background-image: url("images/altDiagnosis.png");/*url("https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c");*/
+  background-image: url("images/frontImages/altDiagnosis.png");/*url("https://images.unsplash.com/photo-1438109491414-7198515b166b?q=80&fm=jpg&s=cbdabf7a79c087a0b060670a6d79726c");*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
