fixed home footer

--- a/index.html
+++ b/index.html
@@ -516,9 +516,9 @@ left: 33%;
               <ul class="list-unstyled">
                 <li><a href="index.html" class="py-2 d-block">Home</a></li>
                 <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
-                <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
+                <li><a href="analysis2.html" class="py-2 d-block">Advanced Analysis</a></li>
                 <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
-                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+                <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
               </ul>
             </div>
           </div>
