--- a/analysis.html
+++ b/analysis.html
@@ -62,7 +62,6 @@
             <div class='col-sm-8 col-md-8'>
           <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Analysis</b></span></h1>
           <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-          <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
         </div>
         </div>
       </div>
@@ -175,7 +174,6 @@
           </div>
         </div>
         <div class="col-md-3 ftco-animate">
-          <p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
         </div>
       </div>
       <div class="row mb-5">
@@ -191,9 +189,9 @@
             <ul class="list-unstyled">
               <li><a href="index.html" class="py-2 d-block">Home</a></li>
               <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
-              <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
+              <li><a href="analysis2.html" class="py-2 d-block">Advanced Analysis</a></li>
               <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
-              <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+              <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
             </ul>
           </div>
         </div>
