--- a/pairings.html
+++ b/pairings.html
@@ -40,7 +40,6 @@
             <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
 	          <li class="nav-item active"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
-            <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -55,7 +54,6 @@
             <div class='col-sm-8'>
           <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Support</b></span></h1>
           <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-          <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
         </div>
         </div>
       </div>
@@ -596,7 +594,7 @@ display: center;
             <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
               <div class="card">
                 <div class="card-img">
-                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/william.jpeg" alt="...">
+                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/the6.png" alt="...">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title"><a href="">Your Match:</a></h3>
@@ -647,7 +645,6 @@ display: center;
 	          </div>
       		</div>
       		<div class="col-md-3 ftco-animate">
-      			<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
       		</div>
       	</div>
         <div class="row mb-5">
@@ -663,9 +660,9 @@ display: center;
               <ul class="list-unstyled">
                 <li><a href="index.html" class="py-2 d-block">Home</a></li>
                 <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
-                <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
+                <li><a href="analysis2.html" class="py-2 d-block">Advanced Analysis</a></li>
                 <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
-                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+                <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
               </ul>
             </div>
           </div>
