fixed headers and title pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
-	          <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
+	          <!-- <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li> -->
 	        </ul>
 	      </div>
 	    </div>
@@ -55,13 +55,13 @@
       <div class="container">
         <center>
         <div class="text mt-4">
-          <div class='testingthis'>
+          <!-- <div class='testingthis'>
             <div class='col-sm-8'>
           <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="50px" style='vertical-align: 0%;'> <b style='font-size: 65px !important;'>SuiSense</b></span></h1>
           <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
           <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
         </div>
-        </div>
+        </div> -->
       </div>
         </center>
       </div>
@@ -85,7 +85,7 @@ left: 33%;
 }
 </style>
 
-<!--
+
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
@@ -104,7 +104,7 @@ left: 33%;
         </div>
       </div>
     </div>
--->
+
 
 
     <section class="ftco-section services-section bg-light">
