--- a/pairings.html
+++ b/pairings.html
@@ -50,12 +50,12 @@
       <div class="container">
         <center>
         <div class="text mt-4">
-          <div class='testingthis'>
+          <!-- <div class='testingthis'>
             <div class='col-sm-8'>
           <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Support</b></span></h1>
           <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
         </div>
-        </div>
+        </div> -->
       </div>
         </center>
       </div>
@@ -79,7 +79,7 @@ left: 33%;
 }
 </style>
 
-<!--
+
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
@@ -95,7 +95,7 @@ left: 33%;
 	    	</div>
       </div>
     </div>
--->
+
 
 
  <!-- copied code from python anywhere form -->
