--- a/analysis2.html
+++ b/analysis2.html
@@ -58,13 +58,13 @@
       <div class="container">
         <center>
         <div class="text mt-4">
-          <div class='testingthis'>
+          <!-- <div class='testingthis'>
             <div class='col-sm-8'>
           <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Advanced Analysis</b></span></h1>
           <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
         </div>
         </div>
-      </div>
+      </div> -->
         </center>
       </div>
     </div>
@@ -87,7 +87,7 @@ left: 33%;
 }
 </style>
 
-<!--
+
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
@@ -105,7 +105,7 @@ left: 33%;
       </div>
     </div>
 
--->
+
 
   <section class="ftco-section">
     <div class="container">
