--- a/analysis.html
+++ b/analysis.html
@@ -55,18 +55,18 @@
     <!-- END nav -->
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
+      <!-- <div class="container">
         <center>
         <div class="text mt-4">
-          <!-- <div class='testingthis'>
+          <div class='testingthis'>
             <div class='col-sm-8 col-md-8'>
           <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Analysis</b></span></h1>
           <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
         </div>
         </div>
-      </div> -->
-        </center>
       </div>
+        </center>
+      </div> -->
     </div>
 
   <style>
